Major changes and refactoring: - Move to Java 23 SDK + Gradle 8.13 - Update dependencies - Include youtube-source and replace default lavaplayer audio manager